--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,8 @@ jobs:
 
     - name: Copy mod DLL into plugins
       run: |
+        if not exist output\x64\BepInEx\plugins mkdir output\x64\BepInEx\plugins
+        if not exist output\x86\BepInEx\plugins mkdir output\x86\BepInEx\plugins
         copy bin\Release\netstandard2.1\ScrollZoomMod.dll output\x64\BepInEx\plugins\
         copy bin\Release\netstandard2.1\ScrollZoomMod.dll output\x86\BepInEx\plugins\
 
